Ejercicio2/IkeaParser.java
// Generated from C:/Users/alvar/OneDrive/Documentos/uni/3.1Cuatri/Procesadores/Laboratorio/PL2/Ex1/Ejercicio2/IkeaParser.g4 by ANTLR 4.13.2
package Ejercicio2;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class IkeaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INICIO_MONTAJE=1, FIN=2, COMO=3, EXTENSION_DE=4, INSERTAR=5, UNIR=6, MARTILLAR=7, 
		COLOCAR=8, GIRAR=9, CONECTAR=10, MARCAR=11, NIVELAR=12, FIJAR=13, EN=14, 
		PARA=15, CON=16, Y=17, A=18, SOBRE=19, DE=20, HACIA=21, MUEBLE=22, HERRAMIENTA=23, 
		HERRAJE=24, PIEZA=25, ESTE_MODULO=26, OPCIONAL=27, ORIENTACION=28, POSICION=29, 
		JUNTO_A=30, UD_MEDIDA=31, GUION=32, PUNTOYCOMA=33, PUNTO=34, PAREN_ABRE=35, 
		PAREN_CIERRA=36, COMA=37, REPETIR=38, VECES=39, CUIDADO=40, NUMERO=41, 
		MEDIDA=42, NOMBRE=43, COMENTARIO=44, ESPACIO=45, ESPACIOHERRAMIENTA=46, 
		TIPOHERRAMIENTA=47, ESPACIOHERRAJE=48, TIPOHERRAJE=49, ESPACIOANUNCIO=50, 
		ANUNCIO=51;
	public static final int
		RULE_programa = 0, RULE_declaracion_inicio = 1, RULE_declaracion_fin = 2, 
		RULE_paso = 3, RULE_comentario = 4, RULE_accion = 5, RULE_pieza = 6, RULE_mueble_referencia = 7, 
		RULE_id = 8, RULE_herramienta = 9, RULE_herramienta_lista = 10, RULE_herraje_lista = 11, 
		RULE_id_herraje = 12, RULE_distancia = 13, RULE_posicion = 14, RULE_veces = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "declaracion_inicio", "declaracion_fin", "paso", "comentario", 
			"accion", "pieza", "mueble_referencia", "id", "herramienta", "herramienta_lista", 
			"herraje_lista", "id_herraje", "distancia", "posicion", "veces"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'INICIO_MONTAJE'", "'FIN'", "'COMO'", "'EXTENSION_DE'", "'INSERTAR'", 
			"'UNIR'", "'MARTILLAR'", "'COLOCAR'", "'GIRAR'", "'CONECTAR'", null, 
			"'NIVELAR'", null, "'EN'", "'PARA'", null, "'Y'", "'A'", "'SOBRE'", "'DE'", 
			"'HACIA'", "'MUEBLE'", "'HERRAMIENTA'", null, "'PIEZA'", "'ESTE_MODULO'", 
			"'OPCIONAL'", null, null, "'JUNTO_A'", null, "'-'", "';'", "'.'", "'('", 
			"')'", "','", "'REPETIR_PASOS'", "'VECES'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INICIO_MONTAJE", "FIN", "COMO", "EXTENSION_DE", "INSERTAR", "UNIR", 
			"MARTILLAR", "COLOCAR", "GIRAR", "CONECTAR", "MARCAR", "NIVELAR", "FIJAR", 
			"EN", "PARA", "CON", "Y", "A", "SOBRE", "DE", "HACIA", "MUEBLE", "HERRAMIENTA", 
			"HERRAJE", "PIEZA", "ESTE_MODULO", "OPCIONAL", "ORIENTACION", "POSICION", 
			"JUNTO_A", "UD_MEDIDA", "GUION", "PUNTOYCOMA", "PUNTO", "PAREN_ABRE", 
			"PAREN_CIERRA", "COMA", "REPETIR", "VECES", "CUIDADO", "NUMERO", "MEDIDA", 
			"NOMBRE", "COMENTARIO", "ESPACIO", "ESPACIOHERRAMIENTA", "TIPOHERRAMIENTA", 
			"ESPACIOHERRAJE", "TIPOHERRAJE", "ESPACIOANUNCIO", "ANUNCIO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "IkeaParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public IkeaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public Declaracion_inicioContext declaracion_inicio() {
			return getRuleContext(Declaracion_inicioContext.class,0);
		}
		public Declaracion_finContext declaracion_fin() {
			return getRuleContext(Declaracion_finContext.class,0);
		}
		public TerminalNode EOF() { return getToken(IkeaParser.EOF, 0); }
		public List<PasoContext> paso() {
			return getRuleContexts(PasoContext.class);
		}
		public PasoContext paso(int i) {
			return getRuleContext(PasoContext.class,i);
		}
		public List<ComentarioContext> comentario() {
			return getRuleContexts(ComentarioContext.class);
		}
		public ComentarioContext comentario(int i) {
			return getRuleContext(ComentarioContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IkeaParserListener ) ((IkeaParserListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IkeaParserListener ) ((IkeaParserListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IkeaParserVisitor ) return ((IkeaParserVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			declaracion_inicio();
			setState(35); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(35);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case NUMERO:
					{
					setState(33);
					paso();
					}
					break;
				case CUIDADO:
					{
					setState(34);
					comentario();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(37); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==CUIDADO || _la==NUMERO );
			setState(39);
			declaracion_fin();
			setState(40);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Declaracion_inicioContext extends ParserRuleContext {
		public TerminalNode INICIO_MONTAJE() { return getToken(IkeaParser.INICIO_MONTAJE, 0); }
		public TerminalNode NUMERO() { return getToken(IkeaParser.NUMERO, 0); }
		public TerminalNode PUNTO() { return getToken(IkeaParser.PUNTO, 0); }
		public TerminalNode NOMBRE() { return getToken(IkeaParser.NOMBRE, 0); }
		public TerminalNode COMO() { return getToken(IkeaParser.COMO, 0); }
		public TerminalNode EXTENSION_DE() { return getToken(IkeaParser.EXTENSION_DE, 0); }
		public Mueble_referenciaContext mueble_referencia() {
			return getRuleContext(Mueble_referenciaContext.class,0);
		}
		public Declaracion_inicioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion_inicio; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IkeaParserListener ) ((IkeaParserListener)listener).enterDeclaracion_inicio(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IkeaParserListener ) ((IkeaParserListener)listener).exitDeclaracion_inicio(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IkeaParserVisitor ) return ((IkeaParserVisitor<? extends T>)visitor).visitDeclaracion_inicio(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declaracion_inicioContext declaracion_inicio() throws RecognitionException {
		Declaracion_inicioContext _localctx = new Declaracion_inicioContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaracion_inicio);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			match(INICIO_MONTAJE);
			setState(44);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NOMBRE) {
				{
				setState(43);
				match(NOMBRE);
				}
			}

			setState(46);
			match(NUMERO);
			setState(50);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMO) {
				{
				setState(47);
				match(COMO);
				setState(48);
				match(EXTENSION_DE);
				setState(49);
				mueble_referencia();
				}
			}

			setState(52);
			match(PUNTO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Declaracion_finContext extends ParserRuleContext {
		public TerminalNode FIN() { return getToken(IkeaParser.FIN, 0); }
		public TerminalNode PUNTO() { return getToken(IkeaParser.PUNTO, 0); }
		public Declaracion_finContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion_fin; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IkeaParserListener ) ((IkeaParserListener)listener).enterDeclaracion_fin(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IkeaParserListener ) ((IkeaParserListener)listener).exitDeclaracion_fin(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IkeaParserVisitor ) return ((IkeaParserVisitor<? extends T>)visitor).visitDeclaracion_fin(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declaracion_finContext declaracion_fin() throws RecognitionException {
		Declaracion_finContext _localctx = new Declaracion_finContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaracion_fin);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(FIN);
			setState(55);
			match(PUNTO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PasoContext extends ParserRuleContext {
		public TerminalNode NUMERO() { return getToken(IkeaParser.NUMERO, 0); }
		public TerminalNode GUION() { return getToken(IkeaParser.GUION, 0); }
		public List<AccionContext> accion() {
			return getRuleContexts(AccionContext.class);
		}
		public AccionContext accion(int i) {
			return getRuleContext(AccionContext.class,i);
		}
		public TerminalNode PUNTO() { return getToken(IkeaParser.PUNTO, 0); }
		public List<TerminalNode> PUNTOYCOMA() { return getTokens(IkeaParser.PUNTOYCOMA); }
		public TerminalNode PUNTOYCOMA(int i) {
			return getToken(IkeaParser.PUNTOYCOMA, i);
		}
		public PasoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paso; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IkeaParserListener ) ((IkeaParserListener)listener).enterPaso(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IkeaParserListener ) ((IkeaParserListener)listener).exitPaso(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IkeaParserVisitor ) return ((IkeaParserVisitor<? extends T>)visitor).visitPaso(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PasoContext paso() throws RecognitionException {
		PasoContext _localctx = new PasoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_paso);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			match(NUMERO);
			setState(58);
			match(GUION);
			setState(59);
			accion();
			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PUNTOYCOMA) {
				{
				{
				setState(60);
				match(PUNTOYCOMA);
				setState(61);
				accion();
				}
				}
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(67);
			match(PUNTO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComentarioContext extends ParserRuleContext {
		public TerminalNode CUIDADO() { return getToken(IkeaParser.CUIDADO, 0); }
		public TerminalNode ANUNCIO() { return getToken(IkeaParser.ANUNCIO, 0); }
		public ComentarioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comentario; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IkeaParserListener ) ((IkeaParserListener)listener).enterComentario(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IkeaParserListener ) ((IkeaParserListener)listener).exitComentario(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IkeaParserVisitor ) return ((IkeaParserVisitor<? extends T>)visitor).visitComentario(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComentarioContext comentario() throws RecognitionException {
		ComentarioContext _localctx = new ComentarioContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_comentario);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(CUIDADO);
			setState(70);
			match(ANUNCIO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AccionContext extends ParserRuleContext {
		public TerminalNode INSERTAR() { return getToken(IkeaParser.INSERTAR, 0); }
		public Herraje_listaContext herraje_lista() {
			return getRuleContext(Herraje_listaContext.class,0);
		}
		public TerminalNode EN() { return getToken(IkeaParser.EN, 0); }
		public List<PiezaContext> pieza() {
			return getRuleContexts(PiezaContext.class);
		}
		public PiezaContext pieza(int i) {
			return getRuleContext(PiezaContext.class,i);
		}
		public List<TerminalNode> Y() { return getTokens(IkeaParser.Y); }
		public TerminalNode Y(int i) {
			return getToken(IkeaParser.Y, i);
		}
		public List<TerminalNode> CON() { return getTokens(IkeaParser.CON); }
		public TerminalNode CON(int i) {
			return getToken(IkeaParser.CON, i);
		}
		public Herramienta_listaContext herramienta_lista() {
			return getRuleContext(Herramienta_listaContext.class,0);
		}
		public TerminalNode UNIR() { return getToken(IkeaParser.UNIR, 0); }
		public TerminalNode MARTILLAR() { return getToken(IkeaParser.MARTILLAR, 0); }
		public TerminalNode SOBRE() { return getToken(IkeaParser.SOBRE, 0); }
		public List<DistanciaContext> distancia() {
			return getRuleContexts(DistanciaContext.class);
		}
		public DistanciaContext distancia(int i) {
			return getRuleContext(DistanciaContext.class,i);
		}
		public List<PosicionContext> posicion() {
			return getRuleContexts(PosicionContext.class);
		}
		public PosicionContext posicion(int i) {
			return getRuleContext(PosicionContext.class,i);
		}
		public TerminalNode COLOCAR() { return getToken(IkeaParser.COLOCAR, 0); }
		public List<TerminalNode> NUMERO() { return getTokens(IkeaParser.NUMERO); }
		public TerminalNode NUMERO(int i) {
			return getToken(IkeaParser.NUMERO, i);
		}
		public TerminalNode GIRAR() { return getToken(IkeaParser.GIRAR, 0); }
		public TerminalNode ORIENTACION() { return getToken(IkeaParser.ORIENTACION, 0); }
		public TerminalNode HACIA() { return getToken(IkeaParser.HACIA, 0); }
		public TerminalNode CONECTAR() { return getToken(IkeaParser.CONECTAR, 0); }
		public TerminalNode ESTE_MODULO() { return getToken(IkeaParser.ESTE_MODULO, 0); }
		public TerminalNode A() { return getToken(IkeaParser.A, 0); }
		public Mueble_referenciaContext mueble_referencia() {
			return getRuleContext(Mueble_referenciaContext.class,0);
		}
		public TerminalNode MARCAR() { return getToken(IkeaParser.MARCAR, 0); }
		public TerminalNode PARA() { return getToken(IkeaParser.PARA, 0); }
		public TerminalNode NIVELAR() { return getToken(IkeaParser.NIVELAR, 0); }
		public TerminalNode FIJAR() { return getToken(IkeaParser.FIJAR, 0); }
		public TerminalNode PAREN_ABRE() { return getToken(IkeaParser.PAREN_ABRE, 0); }
		public TerminalNode OPCIONAL() { return getToken(IkeaParser.OPCIONAL, 0); }
		public TerminalNode PAREN_CIERRA() { return getToken(IkeaParser.PAREN_CIERRA, 0); }
		public TerminalNode REPETIR() { return getToken(IkeaParser.REPETIR, 0); }
		public VecesContext veces() {
			return getRuleContext(VecesContext.class,0);
		}
		public AccionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_accion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IkeaParserListener ) ((IkeaParserListener)listener).enterAccion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IkeaParserListener ) ((IkeaParserListener)listener).exitAccion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IkeaParserVisitor ) return ((IkeaParserVisitor<? extends T>)visitor).visitAccion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AccionContext accion() throws RecognitionException {
		AccionContext _localctx = new AccionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_accion);
		int _la;
		try {
			setState(200);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INSERTAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(72);
				match(INSERTAR);
				setState(73);
				herraje_lista();
				setState(74);
				match(EN);
				setState(75);
				pieza();
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==Y) {
					{
					{
					setState(76);
					match(Y);
					setState(77);
					pieza();
					}
					}
					setState(82);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CON) {
					{
					setState(83);
					match(CON);
					setState(84);
					herramienta_lista();
					}
				}

				}
				break;
			case UNIR:
				enterOuterAlt(_localctx, 2);
				{
				setState(87);
				match(UNIR);
				setState(88);
				pieza();
				setState(91); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(89);
					match(Y);
					setState(90);
					pieza();
					}
					}
					setState(93); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==Y );
				setState(97);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
				case 1:
					{
					setState(95);
					match(CON);
					setState(96);
					pieza();
					}
					break;
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CON) {
					{
					setState(99);
					match(CON);
					setState(100);
					herramienta_lista();
					}
				}

				}
				break;
			case MARTILLAR:
				enterOuterAlt(_localctx, 3);
				{
				setState(103);
				match(MARTILLAR);
				setState(104);
				herraje_lista();
				setState(105);
				match(SOBRE);
				setState(106);
				pieza();
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1074544640L) != 0)) {
					{
					setState(109);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case A:
						{
						setState(107);
						distancia();
						}
						break;
					case EN:
					case SOBRE:
					case JUNTO_A:
						{
						setState(108);
						posicion();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(113);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CON) {
					{
					setState(114);
					match(CON);
					setState(115);
					herramienta_lista();
					}
				}

				}
				break;
			case COLOCAR:
				enterOuterAlt(_localctx, 4);
				{
				setState(118);
				match(COLOCAR);
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NUMERO) {
					{
					setState(119);
					match(NUMERO);
					}
				}

				setState(122);
				pieza();
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1074544640L) != 0)) {
					{
					setState(125);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case A:
						{
						setState(123);
						distancia();
						}
						break;
					case EN:
					case SOBRE:
					case JUNTO_A:
						{
						setState(124);
						posicion();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(129);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case GIRAR:
				enterOuterAlt(_localctx, 5);
				{
				setState(130);
				match(GIRAR);
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==EN || _la==HACIA) {
					{
					setState(131);
					_la = _input.LA(1);
					if ( !(_la==EN || _la==HACIA) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				setState(134);
				match(ORIENTACION);
				}
				break;
			case CONECTAR:
				enterOuterAlt(_localctx, 6);
				{
				setState(135);
				match(CONECTAR);
				setState(136);
				match(ESTE_MODULO);
				setState(137);
				match(A);
				setState(138);
				mueble_referencia();
				setState(139);
				match(CON);
				setState(140);
				herraje_lista();
				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1074544640L) != 0)) {
					{
					setState(143);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case A:
						{
						setState(141);
						distancia();
						}
						break;
					case EN:
					case SOBRE:
					case JUNTO_A:
						{
						setState(142);
						posicion();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(147);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(150);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CON) {
					{
					setState(148);
					match(CON);
					setState(149);
					herramienta_lista();
					}
				}

				}
				break;
			case MARCAR:
				enterOuterAlt(_localctx, 7);
				{
				setState(152);
				match(MARCAR);
				setState(154);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PARA) {
					{
					setState(153);
					match(PARA);
					}
				}

				setState(157);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PIEZA) {
					{
					setState(156);
					pieza();
					}
				}

				setState(163);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1074544640L) != 0)) {
					{
					setState(161);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case A:
						{
						setState(159);
						distancia();
						}
						break;
					case EN:
					case SOBRE:
					case JUNTO_A:
						{
						setState(160);
						posicion();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(165);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(168);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CON) {
					{
					setState(166);
					match(CON);
					setState(167);
					herramienta_lista();
					}
				}

				}
				break;
			case NIVELAR:
				enterOuterAlt(_localctx, 8);
				{
				setState(170);
				match(NIVELAR);
				setState(173);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case PIEZA:
					{
					setState(171);
					pieza();
					}
					break;
				case MUEBLE:
					{
					setState(172);
					mueble_referencia();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(177);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CON) {
					{
					setState(175);
					match(CON);
					setState(176);
					herramienta_lista();
					}
				}

				}
				break;
			case FIJAR:
				enterOuterAlt(_localctx, 9);
				{
				setState(179);
				match(FIJAR);
				setState(183);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PAREN_ABRE) {
					{
					setState(180);
					match(PAREN_ABRE);
					setState(181);
					match(OPCIONAL);
					setState(182);
					match(PAREN_CIERRA);
					}
				}

				setState(186);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CON) {
					{
					setState(185);
					match(CON);
					}
				}

				setState(188);
				herraje_lista();
				setState(191);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CON) {
					{
					setState(189);
					match(CON);
					setState(190);
					herramienta_lista();
					}
				}

				}
				break;
			case REPETIR:
				enterOuterAlt(_localctx, 10);
				{
				setState(193);
				match(REPETIR);
				setState(194);
				match(NUMERO);
				setState(195);
				match(A);
				setState(196);
				match(NUMERO);
				setState(198);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PAREN_ABRE) {
					{
					setState(197);
					veces();
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
